fix build and get report API
